WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273830
Trigger GC when crossing warning threshold on iOS
https://bugs.webkit.org/show_bug.cgi?id=273830
Summary
Trigger GC when crossing warning threshold on iOS
Ben Nham
Reported
2024-05-07 10:37:49 PDT
Trigger a GC if it hasn't occurred recently on warning memory pressure level on iOS to try to decrease the number of foreground OOMs.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-07 10:38:04 PDT
<
rdar://problem/127677553
>
Ben Nham
Comment 2
2024-05-07 10:40:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28244
EWS
Comment 3
2024-05-09 10:05:39 PDT
Committed
278567@main
(ae91c42fd27e): <
https://commits.webkit.org/278567@main
> Reviewed commits have been landed. Closing PR #28244 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug