Trigger GC when crossing warning threshold on iOS https://bugs.webkit.org/show_bug.cgi?id=273830 rdar://127677553

Reviewed by Geoffrey Garen.

On iOS where we have fairly strict memory limits, sometimes the mutator can get far ahead of the
GC. We might wait until a PROC_LIMIT_CRITICAL event fires before a full GC occurs, at which point
the process is already eligible to be killed by the OS.

To try and reduce the number of foreground OOMs, let's also trigger a full GC if it hasn't occurred
recently when a PROC_LIMIT_WARNING event fires (which is 80% of the critical threshold).

* Source/WebCore/page/MemoryRelease.cpp:
(WebCore::releaseMemory):

Canonical link: https://commits.webkit.org/278567@main